collaspible-5.js:expand(): Overflow-x=visible changed to overflow-y=hidden. Prevents entire collapsible block from being visible during expansion.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 .supplement
 /docs/favicon.png
 /docs/site.css
+/docs/colors.css
 /start-msedge.bat
 /start-dev.bat
 /start-vs.bat
 /start-webserver.bat
+/docs/inc/
 
